fix(DATA-2015) : remove classifications filter